# zettaranc-skill

./: .gitignore  .m0_baseline.txt  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SKILL.md  pyproject.toml  requirements.txt  skill.json  test-prompts.json
corpus/: dual_axis_review.py  quality_check.py
docs/: CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  TODO.md  intent-router-design.md
knowledge/: business-judgment.md  career-development.md  life-decision.md
modules/: __init__.py  backtest.py  backtest_six_step.py  bridge_client.py  cli.py  cli_commands.py  commentary_service.py  constants.py  data_sync.py  database.py  datasource.py  dynamic_config.py  harness_updater.py  improvement_logger.py  indevs_client.py  indicators.py  industry_filter.py  intent_chat.py  intent_router.py  knowledge_retriever.py  llm_providers.py  loop_engine.py  loop_engine_enhanced.py  market_regime.py  monitor.py  notifier.py  portfolio_diagnosis.py  position_manager.py  report.py  review_generator.py  screener.py  setup_wizard.py  strategies.py  tracking_manager.py  tracking_syncer.py  trade_manager.py  trade_parser.py  (+4 more)
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/backtest_engine/: Cargo.toml
rust/crates/backtest_engine/src/: lib.rs  portfolio.rs
rust/crates/bindings/: Cargo.toml
rust/crates/bindings/src/: backtest_bindings.rs  lib.rs
rust/crates/grid_search/: Cargo.toml
rust/crates/grid_search/src/: lib.rs  walk_forward.rs
rust/crates/grid_search/tests/: proptest.rs
rust/crates/indicators/: Cargo.toml
rust/crates/screener/: Cargo.toml
rust/crates/screener/src/: lib.rs  scoring.rs
rust/crates/screener/tests/: proptest.rs
(+152 files in other folders)
