[package]
name = "zt_bindings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "_core_compute"
crate-type = ["cdylib"]

[dependencies]
zt_core_types = { path = "../core_types" }
zt_indicators = { path = "../indicators" }
zt_backtest_engine = { path = "../backtest_engine" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
approx = { workspace = true }
